<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="140dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ehealthlogofinal"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:padding="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUsername"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                style="@style/bluetext20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="10dp"
                android:hint="Username"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/bluetext20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:drawableLeft="@drawable/lock"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:hint="Password"
                android:padding="15dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btnstyle1"
            android:text="Login"
            android:padding="10dp"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv"
            style="@style/bluetext20"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?" />


        <TextView
            android:id="@+id/createacc"
            style="@style/graytext20"
            android:gravity="center"
            android:textColor="@color/colorDarkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Account" />

    </LinearLayout>

</LinearLayout>