<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/ehealthlogofinal"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/fullname"
                    style="@style/bluetext20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/userpicture"
                    android:drawableLeft="@drawable/userpicture"
                    android:drawablePadding="10dp"
                    android:hint="Full Name"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    style="@style/bluetext20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/user"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:hint="Username"
                    android:padding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    style="@style/bluetext20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    style="@style/bluetext20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/lock"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:hint="Password"
                    android:padding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/repassword"
                    style="@style/bluetext20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/lock"
                    android:drawableLeft="@drawable/lock"
                    android:inputType="textPassword"
                    android:drawablePadding="10dp"
                    android:hint="Re-type Password"
                    android:padding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/gender"
                    style="@style/bluetext20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/gender"
                    android:drawableLeft="@drawable/gender"
                    android:drawablePadding="10dp"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="Gender:"
                    android:padding="15dp"
                    android:textColor="@color/colorPrimary" />

                <RadioGroup
                    android:id="@+id/rggender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_toRightOf="@+id/gender"
                    android:orientation="vertical">


                    <RadioButton
                        android:id="@+id/rbmale"
                        style="@style/bluetext20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/rbfemale"
                        style="@style/bluetext20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rbmale"
                        android:text="Female" />

                    <RadioButton
                        android:id="@+id/rbother"
                        style="@style/bluetext20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Others" />

                </RadioGroup>
            </RelativeLayout>

            <TextView
                style="@style/bluetext20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="By creating an account you agree to our Terms of Service and Privacy Policy" />

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btnstyle1"
                android:text="Sign up"
                android:textColor="#FFF"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>